force-app/main/default/objects/SOI_Venue__c/SOI_Venue__c.object-meta.xml
<CustomObject>
    <label>SOI_Venue</label>
    <nameField>
        <label>SOI_Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SOI_Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>