force-app/main/default/objects/SOI_Venue__c/fields/Club_ID__c.field-meta.xml
<CustomField>
    <fullName>Club_ID__c</fullName>
    <label>Club_ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>