force-app/main/default/objects/SOI_Venue__c/fields/SOI_City__c.field-meta.xml
<CustomField>
    <fullName>SOI_City__c</fullName>
    <label>SOI_City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>