force-app/main/default/objects/SOI_Venue__c/fields/SOI_Club__c.field-meta.xml
<CustomField>
    <fullName>SOI_Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SOI_Club</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SOI_Venues</relationshipLabel>
    <relationshipName>SOI_Venues</relationshipName>
    <type>Lookup</type>
</CustomField>