force-app/main/default/objects/SOI_Venue__c/fields/SOI_ClubVenueRelationShip__c.field-meta.xml
<CustomField>
    <fullName>SOI_ClubVenueRelationShip__c</fullName>
    <label>SOI_ClubVenueRelationShip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>