force-app/main/default/objects/SOI_Venue__c/fields/VenueImportID__c.field-meta.xml
<CustomField>
    <fullName>VenueImportID__c</fullName>
    <label>VenueImportID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>